--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
+    "csv-parse": "^5.5.2",
     "eslint-config-prettier": "^8.3.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.0.10",
     "openai": "^3.1.0",
+    "pdf-parse": "^1.1.1",
     "prettier": "^2.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
